--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.16.3",
     "express-react-views": "^0.10.5",
     "method-override": "^3.0.0",
+    "moment": "^2.24.0",
     "pg": "^7.4.3",
     "react": "^16.5.2",
     "react-dom": "^16.5.2"
