--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.16.3",
     "express-react-views": "^0.10.5",
+    "js-sha256": "^0.9.0",
     "method-override": "^3.0.0",
     "moment": "^2.24.0",
     "pg": "^7.4.3",
