--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Sam",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.4",
     "express": "^4.16.3",
     "express-react-views": "^0.10.5",
     "js-sha256": "^0.9.0",
